# datn-hoanglinh

./: .gitignore  Dockerfile  README.md  data.json   docker-compose.yml  pyproject.toml
authentication/: middleware.py  models.py  serializers.py  urls.py  views.py
authentication/migrations/: 0001_initial.py  0002_alter_user_is_active.py  0003_alter_user_is_active.py  0004_user_point.py  0005_rename_point_user_score.py
core/: __init__.py  app_celery.py  asgi.py  routing.py  settings.py  urls.py
leaderboard/: models.py  serializers.py  urls.py  views.py
leaderboard/migrations/: 0001_initial.py
play_game/: apps.py  consumers.py  serializers.py  urls.py  views.py
question/: models.py  serializers.py  urls.py  views.py
question/migrations/: 0001_initial.py  0002_remove_question_question_text_remove_question_score_and_more.py  0003_alter_question_topic.py  0004_alter_question_image.py
templates/account/: email_confirm.html
templates/account/email/: email_confirmation_message.txt  email_confirmation_subject.txt
topic/: apps.py  models.py  serializers.py  signals.py  task.py  urls.py  views.py
topic/migrations/: 0001_initial.py  0002_topic_owner.py
